repair title overflow and banner display in mobile

--- a/content/themes/bigertech/assets/less/index.less
+++ b/content/themes/bigertech/assets/less/index.less
@@ -345,9 +345,6 @@
       padding-right: 0px;
       border-right: 0px;
     }
-    .topic-item-right {
-
-    }
     .topic-item-left, .topic-item-right {
       display: block;
       width: 90%;
@@ -366,6 +363,7 @@
         .topic-title {
           top: 28px;
           left: 27px;
+          width: 90%;
           max-height: 1.2em;
           line-height: 1.2em;
           padding-left: 0px;
@@ -379,6 +377,7 @@
       }
     }
     .post-meta {
+      height: 39px;
       margin-top: 24px;
       margin-bottom: 0px;
       font-size: 12px;
